# ApexManager

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: app.rs  main.rs  server_process.rs
src/config/: assist_rules.rs  bop.rs  entry_list.rs  event.rs  event_rules.rs  mod.rs  preset.rs  results.rs  server_config.rs  settings.rs
src/data/: cars.rs  categories.rs  mod.rs  tracks.rs
src/ui/: admin.rs  assist_rules.rs  bop.rs  entry_list.rs  event.rs  event_rules.rs  log_viewer.rs  mod.rs  process.rs  reference.rs  results.rs  server_config.rs  settings.rs  sidebar.rs  theme.rs  topbar.rs  widgets.rs
src/util/: format.rs  io.rs
