[package]
name = "apex_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
encoding_rs = "0.8"
notify = "6"
anyhow = "1"
dirs = "5"

[profile.release]
lto = true
opt-level = 3
